--- a/src/assets/css/room_detail.css
+++ b/src/assets/css/room_detail.css
@@ -1678,3 +1678,8 @@ span.flatpickr-weekday {
   font-size: 24px;
   cursor: pointer;
 }
+.detail--loading--img {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
