--- a/src/assets/css/sign-in.css
+++ b/src/assets/css/sign-in.css
@@ -24,23 +24,27 @@ body {
   color: var(--text-color);
   background-color: white;
 }
-input {
+.signin-wrap input {
   outline: none;
   width: 400px;
   color: var(--text-color);
   font-size: 16px;
   border: none;
 }
-label {
+.signin-wrap input::placeholder {
+  text-align: start;
+}
+.signin-wrap label {
   font-size: 16px;
   font-weight: 600;
 }
-.signup-wrap {
+.signin-wrap {
   position: relative;
   height: 589px;
+  line-height: 24px;
   margin-bottom: 40px;
 }
-.signup-content {
+.signin-content {
   margin-top: 40px;
   margin-bottom: 40px;
   width: auto;
@@ -52,17 +56,17 @@ label {
   border-radius: 20px;
   box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.1);
 }
-.signup-header {
+.signin-header {
   margin-top: 20px;
   font-size: 30px;
   font-weight: 700;
   text-align: center;
 }
-.signup-form-wrap {
+.signin-form-wrap {
   margin-top: 40px;
   width: 100%;
 }
-.signup-form {
+.signin-form {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -110,10 +114,13 @@ label {
   opacity: 1;
   cursor: pointer;
 }
-.icon-password ion-icon {
+.icon-password img {
+  width: 18px;
+  height: 18px;
+  opacity: 0.8;
   display: none;
 }
-.icon-password ion-icon.active {
+.icon-password img.active {
   display: block;
 }
 button {
@@ -128,16 +135,16 @@ button {
   width: auto;
   justify-content: space-between;
 }
-.background {
+.background-signin {
   position: absolute;
   top: 40px;
   left: 0;
   right: 0;
-  bottom: 0;
+  height: 528px;
   z-index: -1;
   border-radius: 20px 0 0 20px;
 }
-.background img {
+.background-signin img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -168,7 +175,7 @@ button {
 .pop-up-overlay.active {
   display: block;
 }
-.pop-up {
+.pop-up-signin {
   background-color: white;
   display: flex;
   position: fixed;
@@ -182,8 +189,12 @@ button {
   border-radius: 10px;
   display: none;
 }
-.pop-up.active {
+.pop-up-signin.active {
   display: flex;
+}
+.pop-up-signin img {
+  width: 35px;
+  height: 35px;
 }
 .toast-icon {
   color: green;
@@ -281,10 +292,10 @@ button {
 @media (max-width: 1023px) {
 }
 @media (max-width: 767px) {
-  .signup-content {
+  .signin-content {
     width: 400px;
   }
-  input {
+  .signin-wrap input {
     width: 100%;
   }
 }
