--- a/src/assets/css/payment.css
+++ b/src/assets/css/payment.css
@@ -90,7 +90,7 @@ body {
 }
 .content-item .guest-menu-wrap {
 }
-.guest-menu {
+.content-item .guest-menu {
   width: unset;
   display: block;
   position: fixed;
@@ -527,25 +527,25 @@ body {
   border-radius: 10px;
 }
 @media (max-width: 991px) {
-  .guest-menu {
+  .content-item .guest-menu {
     left: 30%;
     right: 30%;
   }
 }
 @media (max-width: 767px) {
-  .guest-menu {
+  .content-item .guest-menu {
     left: 25%;
     right: 25%;
   }
 }
 @media (max-width: 600px) {
-  .guest-menu {
+  .content-item .guest-menu {
     left: 15%;
     right: 15%;
   }
 }
 @media (max-width: 375px) {
-  .guest-menu {
+  .content-item .guest-menu {
     left: 5%;
     right: 5%;
     top: 15%;
