--- a/src/style.css
+++ b/src/style.css
@@ -462,6 +462,9 @@ a:hover {
   position: relative;
   color: var(--text-color);
 }
+.avatar p {
+  margin: 0;
+}
 .avatar::after {
   content: "";
   width: 100%;
@@ -1290,10 +1293,13 @@ input[type="number"]::-webkit-inner-spin-button {
   align-items: center;
 }
 .booking__room--list--item--rate p {
-  width: 100%;
   font-weight: medium;
   font-size: 14px;
   margin-bottom: 0;
+}
+.booking__room--list--item--rate img {
+  aspect-ratio: 1.1;
+  width: 15px;
 }
 .booking__room--list--item--name {
   font-size: 18px;
