--- a/src/responsive.css
+++ b/src/responsive.css
@@ -247,17 +247,6 @@
     right: 0;
     left: 0;
   }
-  .list--item-wrap {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .booking__room--list--item--rate {
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-  }
 }
 /*Tablet*/
 @media (min-width: 740px) and (max-width: 1023px) {
@@ -359,5 +348,19 @@ span.flatpickr-weekday {
 @media (max-width: 480px) {
   .guest-menu {
     left: -150px;
+  }
+}
+
+@media (max-width: 1112px) {
+  .list--item-wrap {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .booking__room--list--item--rate {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
