--- a/src/style.css
+++ b/src/style.css
@@ -1527,7 +1527,7 @@ input[type="number"]::-webkit-inner-spin-button {
   flex-direction: column;
   gap: 20px;
   padding: 20px;
-  box-shadow: -2px 2px rgba(209, 207, 207, 0.459);
+  box-shadow: 0 0 5px 1px rgba(209, 207, 207, 0.459);
   border-radius: 10px;
   z-index: 10;
 }
