--- a/src/assets/css/sign-up.css
+++ b/src/assets/css/sign-up.css
@@ -247,6 +247,24 @@ button {
   transform: translateX(150%);
   transition: all 0.3s ease;
 }
+.toast-success {
+  width: 300px;
+  border: 1px solid #0f9b0f;
+  border-radius: 5px;
+  border-left: 20px solid #0f9b0f;
+  background-color: white;
+  display: flex;
+  padding: 20px;
+  padding-left: 0;
+  padding-right: 30px;
+  gap: 5px;
+  align-items: center;
+  position: relative;
+  height: 80px;
+  overflow: hidden;
+  transform: translateX(150%);
+  transition: all 0.3s ease;
+}
 .toast-error::before {
   content: "";
   position: absolute;
@@ -255,6 +273,16 @@ button {
   right: 0;
   height: 5px;
   background-color: rgb(210, 35, 6);
+  animation: timeDelete 3s linear 1 forwards;
+}
+.toast-success::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 5px;
+  background-color: #0f9b0f;
   animation: timeDelete 3s linear 1 forwards;
 }
 @keyframes timeDelete {
@@ -266,6 +294,9 @@ button {
   }
 }
 .toast-error.active {
+  transform: translateX(0);
+}
+.toast-success.active {
   transform: translateX(0);
 }
 .toast-error-icon {
