--- a/src/assets/css/payment.css
+++ b/src/assets/css/payment.css
@@ -241,8 +241,7 @@ body {
   position: relative;
   height: 60px;
   padding: 10px;
-  border: 1px solid var(--border-bottom-color);
-  border-radius: 10px;
+
   display: flex;
 }
 .payment-by-number input {
@@ -252,6 +251,9 @@ body {
   outline: none;
   color: var(--text-color);
 }
+.payment-by-number input::placeholder {
+  text-align: start;
+}
 .card-number {
   position: absolute;
   left: 10px;
@@ -260,10 +262,58 @@ body {
   transition: all 0.2s ease;
   opacity: 0.8;
 }
+.card-ex-cvv {
+  display: flex;
+}
+.card-ex-cvv .payment-by-number:nth-child(1) {
+  margin-right: -1px;
+  width: 70%;
+}
+.card-ex-cvv .payment-by-number:nth-child(2) {
+  width: 30%;
+}
+.card-ex-cvv .payment-by-number:nth-child(1) {
+  border-radius: 10px 0 0 10px;
+  border-right: none;
+}
+.card-ex-cvv .payment-by-number:nth-child(2) {
+  border-radius: 0 10px 10px 0;
+  border-collapse: collapse;
+}
+.card-border,
+.card-border-half,
+.card-border-half-two {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border: 1px var(--border-bottom-color) solid;
+  border-radius: 10px;
+  z-index: -2;
+}
+.card-border-half {
+  border-right: none;
+  border-radius: 10px 0 0 10px;
+}
+.card-border-half-two {
+  border-radius: 0 10px 10px 0;
+}
 .payment-by-number input:focus-visible + .card-number {
   top: 0;
   background-color: white;
   opacity: 1;
+}
+.payment-by-number input:focus-visible ~ .card-border {
+  border: 1px var(--text-color) solid;
+}
+.payment-by-number input:focus-visible ~ .card-border-half {
+  border: 1px var(--text-color) solid;
+  border-collapse: collapse;
+  z-index: -1;
+}
+.payment-by-number input:focus-visible ~ .card-border-half-two {
+  border: 1px var(--text-color) solid;
 }
 .payment-by-number input:not(:placeholder-shown) + .card-number {
   top: 0;
@@ -539,11 +589,17 @@ body {
     left: 30%;
     right: 30%;
   }
+  .confirm-payment {
+    margin-bottom: 50px;
+  }
 }
 @media (max-width: 767px) {
   .content-item .guest-menu {
     left: 25%;
     right: 25%;
+  }
+  .confirm-payment {
+    padding: 0;
   }
 }
 @media (max-width: 600px) {
