--- a/src/assets/css/room_detail.css
+++ b/src/assets/css/room_detail.css
@@ -33,8 +33,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 91px;
-  height: 52px;
+  width: 50px;
+  height: 50px;
   border-radius: 26px;
   border: 1px solid var(--text-color);
   z-index: 2;
@@ -45,6 +45,11 @@ body {
 .user:hover {
   cursor: pointer;
   box-shadow: 0 5px 10px #7e7d7d96;
+}
+.user-icon img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 .become-host {
   width: 100%;
@@ -1419,22 +1424,7 @@ span.guest-pet.active {
 .user-wrap {
   position: relative;
 }
-.user__menu {
-  position: absolute;
-  right: -1px;
-  top: calc(100% + 5px);
-  width: 240px;
-  color: var(--text-color);
-  background-color: white;
-  height: fit-content;
-  display: none;
-  flex-direction: column;
-  gap: 20px;
-  padding: 20px;
-  box-shadow: -3px 3px 10px 5px rgba(209, 207, 207, 0.678);
-  border-radius: 10px;
-  z-index: 999;
-}
+
 
 .user__menu:hover {
   cursor: default;
@@ -1463,15 +1453,7 @@ span.guest-pet.active {
 .user__menu-signup {
   position: relative;
 }
-.user__menu-signup::after {
-  content: "";
-  width: 240px;
-  height: 1px;
-  background-color: var(--border-bottom-color);
-  position: absolute;
-  top: calc(100% + 10px);
-  left: -20px;
-}
+
 .user__overlay {
   position: fixed;
   top: 0;
