--- a/src/assets/css/room_detail.css
+++ b/src/assets/css/room_detail.css
@@ -191,6 +191,7 @@ body {
   object-fit: cover;
 }
 .share__menu--info--detail--item p {
+  font-weight: 500;
   margin: 0;
   margin-right: 10px;
 }
