--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -482,6 +482,7 @@ a:hover {
   align-items: center;
   z-index: 10;
   transition: all 0.5s ease;
+  padding: 0;
 }
 .avatar {
   width: 100%;
@@ -515,10 +516,19 @@ a:hover {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 0;
   align-items: center;
+  padding: 0;
 }
-
+.menu-list li {
+  width: 100%;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+}
+.menu-list li:hover {
+  background-color: rgba(0, 0, 255, 0.1);
+}
 .menu-item {
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
