--- a/src/assets/css/payment.css
+++ b/src/assets/css/payment.css
@@ -531,7 +531,7 @@ body {
 .success-wrap {
   position: fixed;
   width: 400px;
-  height: 200px;
+  height: 220px;
   top: calc((100% - 200px) / 2);
   left: calc((100% - 400px) / 2);
   background-color: white;
@@ -550,7 +550,7 @@ body {
 .payment-success {
   display: flex;
   align-items: center;
-  padding: 0 20px;
+  justify-content: center;
 }
 .success-icon {
   color: green;
@@ -562,12 +562,12 @@ body {
   align-items: center;
 }
 .success-icon img {
-  width: 35px;
-  height: 35px;
+  width: 50px;
 }
 .success-content {
   font-size: 24px;
   font-weight: 700;
+  text-align: center;
 }
 .success-nav {
   display: flex;
