--- a/src/assets/css/manage.css
+++ b/src/assets/css/manage.css
@@ -75,8 +75,9 @@
   justify-content: center;
   align-items: center;
 }
-.manage-wrap .date-header {
+.manage-wrap .date-header-manage {
   font-size: 16px;
+  font-weight: 600;
 }
 .manage-wrap .date-des {
   color: var(--text-color);
